src/test/ui/nll/issue-21232-partial-init-and-erroneous-use.stderr
error[E0381]: assign of possibly uninitialized variable: `d`
  --> $DIR/issue-21232-partial-init-and-erroneous-use.rs:28:5
   |
LL |     d.x = 10;
   |     ^^^^^^^^ use of possibly uninitialized `d`

error[E0381]: assign of possibly uninitialized variable: `d`
  --> $DIR/issue-21232-partial-init-and-erroneous-use.rs:34:5
   |
LL |     d.x = 10;
   |     ^^^^^^^^ use of possibly uninitialized `d`

error[E0382]: assign of moved value: `d`
  --> $DIR/issue-21232-partial-init-and-erroneous-use.rs:41:5
   |
LL |     let mut d = D { x: 0, s: S{ y: 0, z: 0 } };
   |         ----- move occurs because `d` has type `D`, which does not implement the `Copy` trait
LL |     drop(d);
   |          - value moved here
LL |     d.x = 10;
   |     ^^^^^^^^ value assigned here after move

error[E0381]: assign to part of possibly uninitialized variable: `d`
  --> $DIR/issue-21232-partial-init-and-erroneous-use.rs:47:5
   |
LL |     d.s.y = 20;
   |     ^^^^^^^^^^ use of possibly uninitialized `d.s`

error[E0381]: assign to part of possibly uninitialized variable: `d`
  --> $DIR/issue-21232-partial-init-and-erroneous-use.rs:53:5
   |
LL |     d.s.y = 20;
   |     ^^^^^^^^^^ use of possibly uninitialized `d.s`

error[E0382]: assign to part of moved value: `d`
  --> $DIR/issue-21232-partial-init-and-erroneous-use.rs:60:5
   |
LL |     let mut d = D { x: 0, s: S{ y: 0, z: 0} };
   |         ----- move occurs because `d` has type `D`, which does not implement the `Copy` trait
LL |     drop(d);
   |          - value moved here
LL |     d.s.y = 20;
   |     ^^^^^^^^^^ value partially assigned here after move

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0381, E0382.
For more information about an error, try `rustc --explain E0381`.
